# mcp

./: CHANGELOG.md  README.md  level2.5.py  llm_mcp_tool_bridge_demo.py  mcp_llm_bridge_client.py  mcp_llm_server.py  pyproject.toml  requirements.txt  test_llm_mcp_bridge_scenarios.py  test_math_mcp_server.py
docs/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.bridge_client.md  README.bridge_demo.md  README.dynamic_tools.md  README.llm_client.md  README.math_server.md  README.overview.md  README.tests.md  README.todo_server.md  lm-studio-llm-tool-call-docs.md  mcp-client-by-antrophic-docs.md  mcp-server-by-antrophic-docs.md
examples/: bridge_demo.py  dynamic_demo.py
level0/: README.md  mcp_client.py  mcp_server.py
level1/: README.md  mcp_client.py  mcp_server.py
level2/: README.md  mcp_client.py  mcp_server.py
level3/: README.md  mcp_client.py  mcp_server.py
src/mcp_bridge/: __init__.py
src/mcp_bridge/bridge/: __init__.py  client.py
src/mcp_bridge/llm/: __init__.py  openai_client.py
src/mcp_bridge/servers/: __init__.py  dynamic_registry.py  math_server.py  todo_server.py
src/mcp_bridge/storage/: store.py
tests/: test_dynamic_tool_awareness.py  test_llm_mcp_bridge_scenarios.py  test_math_mcp_server.py  test_todo_mcp_server.py  test_todo_persistence_sqlite.py
